# transciphering-key-gen

harness/: aes_keygen_and_encrypt.py  cleartext_impl.py  run_submission.py
scripts/: build_task.sh
submission/: Cargo.toml
submission/cbs_lib/src/: automorphism.rs
submission/src/: help_fun.rs
