[package]
name = "submission"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
serde = "1"
rand = { version = "0.9.1" }

[[bin]]
name = "client_preprocess"

[[bin]]
name = "client_key_generation"

[[bin]]
name = "client_encode_encrypt"

[[bin]]
name = "server_preprocess_dataset"

[[bin]]
name = "server_encrypted_aes_decryption"

[[bin]]
name = "server_encrypted_compute"

[[bin]]
name = "client_decrypt_decode_aes_decryption"

[[bin]]
name = "client_decrypt_decode"

[[bin]]
name = "client_postprocess_aes_decryption"

[[bin]]
name = "client_postprocess"